# codesys-code-gen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  gConst.st  pyproject.toml  update_version.sh
codesys_code_gen/: common_structs.py  common_structs.pyi  converters.py  converters.pyi  mixin.py  mixin.pyi  types.py  types.pyi
tests/: test_codesys_code_gen.py
