[tool.poetry]
name = "codesys-code-gen"
version = "1.1.6"
description = ""
authors = ["John te Bokkel <john@powercoreeng.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^23.2.0"
boltons = "^23.1.1"
pylatex = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
