[tool.poetry]
name = "codesys-code-gen"
version = "1.2.0"
description = ""
authors = ["John te Bokkel <john@powercoreeng.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^24.0.0"
boltons = "^24.0.0"
pylatex = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
